Fix bug where stroke's bounding box was clipped https://bugs.webkit.org/show_bug.cgi?id=83651

Reviewed by Dirk Schulze.

Source/WebCore:

This change contains two fixes for one bug:
1) FloatRect::contains contained a nasty mistake where
   maxy() < y() was compared instead of maxy() < point.y().
2) RenderSVGShape::strokeContains was depending on its internal
   m_strokeAndMarkerBoundingBox instead of calling the virtual
   method strokeBoundingBox(). This change switches to using
   strokeBoundingBox().

Test: svg/hittest/svg-ellipse-rect-stroke.xhtml

* platform/graphics/FloatRect.cpp:
(WebCore::FloatRect::contains):
* rendering/svg/RenderSVGShape.cpp:
(WebCore::RenderSVGShape::strokeContains):

LayoutTests:

* svg/hittest/svg-ellipse-rect-stroke-expected.txt: Added.
* svg/hittest/svg-ellipse-rect-stroke.xhtml: Added.


Canonical link: https://commits.webkit.org/101177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113879 268f45cc-cd09-0410-ab3c-d52691b4dbfc